--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
         uses: actions/setup-java@v2.1.0
         with:
     # The Java version to set up. Takes a whole or semver Java version. See examples of supported syntax in README file
-          java-version: 11
+          java-version: '11'
     # Java distribution. See the list of supported distributions in README file
-          distribution: jdk
+          distribution: 'jdk'
     # The package type (jdk, jre, jdk+fx, jre+fx)
    
 
