--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
                 </executions>
             </plugin>
 
-            <!-- Disable maven surefire pligin (phase = none)  -->
+            <!-- Disable maven surefire plugin (phase = none)  -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
